fix x-overflow on supporters div

--- a/css/new-age.css
+++ b/css/new-age.css
@@ -244,6 +244,7 @@ section.cta {
 
 section.supporters {
   background-color: #fff;
+  overflow-x: hidden;
 }
 
 section.supporters img {
